[package]
name = "grpcmock-test"
version = "0.1.0"
edition = "2021"
authors = ["Dan Clark, Gaurav Kumbhat"]

license = "Apache-2.0"
repository = "https://github.com/IBM/grpcmock"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
grpcmock = { path = "../grpcmock" }
http = "1.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
tokio = "1.42.0"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
