[package]
name = "grpcmock"
version = "0.1.1"
edition = "2021"
authors = ["Dan Clark, Gaurav Kumbhat"]
description = "gRPC server mocking for Rust"

license = "Apache-2.0"
repository = "https://github.com/IBM/grpcmock"
documentation = "https://docs.rs/grpcmock/"
readme = "../README.md"

keywords = ["mocking", "grpc-mocking", "grpc", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
doctest = false

[dependencies]
bytes = "1.9.0"
futures = "0.3.31"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
http-serde = "2.1.1"
prost = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
thiserror = "2.0.4"
tokio = "1.42.0"
tonic = "0.12.3"
tracing = "0.1.41"
