[package]
name = "grpcmock"
version = "0.1.1"
edition = "2021"
authors = ["Dan Clark, Gaurav Kumbhat"]
description = "gRPC server mocking for Rust"

license = "Apache-2.0"
repository = "https://github.com/IBM/grpcmock"
documentation = "https://docs.rs/grpcmock/"
readme = "../README.md"

keywords = ["mocking", "grpc-mocking", "grpc", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
doctest = false

[dependencies]
bytes = "1"
futures = "0"
http = "1"
http-body = "1"
http-body-util = "0"
http-serde = "2"
prost = "0"
rand = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0"
thiserror = "2"
tokio = "1"
tonic = "0"
tracing = "0"
